--- a/_posts/0000-01-02-anatienz.md
+++ b/_posts/0000-01-02-anatienz.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to new update slide!"
 ---
 new test
 Use the left arrow to go back!
